# async_pgn_webcrawler

./: .gitignore  LICENSE  README.MD  main.py  pyproject.toml  requirements.txt
errors/: __init__.py  exceptions.py
src/: asyncwebcrawler.py  decompress_files.py
