[tool.poetry]
name = "async-web-crawler"
version = "0.1.0"
description = "An asynchronous web crawler to download files from websites."
authors = ["Koehler, Nils"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"
aiohttp = "^3.8.1"
beautifulsoup4 = "^4.12.2"
structlog = "^24.4.0"
black = "^24.10.0"
pylint = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
